--- a/argo-cd/templates/application.yaml
+++ b/argo-cd/templates/application.yaml
@@ -8,7 +8,7 @@ spec:
   source:
     repoURL: https://github.com/sinotna/Gitops.git
     targetRevision: HEAD
-    path: dev
+    path: apps
   destination: 
     server: https://kubernetes.default.svc
     namespace: myapp
