--- a/argo-cd/templates/application.yaml
+++ b/argo-cd/templates/application.yaml
@@ -11,7 +11,7 @@ spec:
     path: apps
   destination: 
     server: https://kubernetes.default.svc
-    namespace: myapp
+    namespace: default
   syncPolicy:
     syncOptions:
     - CreateNamespace=true
