--- a/application.yaml
+++ b/application.yaml
@@ -12,3 +12,7 @@ spec:
   destination: 
     server: https://kubernetes.default.svc
     namespace: default
+  syncPolicy:
+    automated:
+      selfHeal: true
+      prune: true
