--- a/app-root/templates/application.yaml
+++ b/app-root/templates/application.yaml
@@ -9,7 +9,7 @@ spec:
   project: default
   source:
     repoURL: https://github.com/sinotna/Gitops.git
-    targetRevision: HEAD
+    targetRevision: main
     path: {{ trimPrefix "apps/" $appname }}
   destination: 
     server: https://kubernetes.default.svc
