--- a/istiod/values.yaml
+++ b/istiod/values.yaml
@@ -2,7 +2,7 @@
 
 ## Discovery Settings
 pilot:
-  autoscaleEnabled: true
+  autoscaleEnabled: false
   autoscaleMin: 1
   autoscaleMax: 5
   replicaCount: 1
