--- a/norun/istiod/values.yaml
+++ b/norun/istiod/values.yaml
@@ -2,7 +2,7 @@
 
 ## Discovery Settings
 pilot:
-  autoscaleEnabled: false
+  autoscaleEnabled: true
   autoscaleMin: 1
   autoscaleMax: 5
   replicaCount: 1
@@ -219,7 +219,7 @@ global:
   # Dev builds from prow are on gcr.io
   hub: docker.io/istio
   # Default tag for Istio images.
-  tag: 1.18.0
+  tag: 1.18.1
   # Variant of the image to use.
   # Currently supported are: [debug, distroless]
   variant: ""
