--- a/Apps/istiod/templates/deployment.yaml
+++ b/Apps/istiod/templates/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: istiod{{- if not (eq .Values.revision "") }}-{{ .Values.revision }}{{- end }}
-  namespace: {{ .Release.Namespace }}
+  namespace: istio-system
   labels:
     app: istiod
     istio.io/rev: {{ .Values.revision | default "default" }}
