--- a/appilcationsets.yaml
+++ b/appilcationsets.yaml
@@ -3,7 +3,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
   name: myappset
-  namespace: argocd
+  namespace: default
 spec:
   generators:
   - git:
@@ -32,37 +32,37 @@ spec:
         automated:
           prune: true
           selfHeal: false
----
-apiVersion: argoproj.io/v1alpha1
-kind: ApplicationSet
-metadata:
-  name: istio
-  namespace: istio-system
-spec:
-  generators:
-  - git:
-      repoURL: https://github.com/sinotna/Gitops.git
-      revision: HEAD
-      directories:
-      - path: "Istio/*"
-  template:
-    metadata:
-      name: '{{ path.basename }}' # name of the application
-    spec:
-      project: 'default' # all Applications are created on project 'default'
-      source:
-        repoURL: https://github.com/sinotna/Gitops.git
-        targetRevision: HEAD # can be set via the cluster config.json
-        path: '{{ path }}'
-        helm:
-          ignoreMissingValueFiles: true
-          valueFiles:
-          - values.yaml
-          - values-env.yaml
-      destination:
-        server: 'https://kubernetes.default.svc' # default value
-        namespace: istio-system
-      syncPolicy:
-        automated:
-          prune: true
-          selfHeal: false
+#---
+#apiVersion: argoproj.io/v1alpha1
+#kind: ApplicationSet
+#metadata:
+#  name: istio
+#  namespace: istio-system
+#spec:
+#  generators:
+#  - git:
+#      repoURL: https://github.com/sinotna/Gitops.git
+#      revision: HEAD
+#      directories:
+#      - path: "Istio/*"
+#  template:
+#    metadata:
+#      name: '{{ path.basename }}' # name of the application
+#    spec:
+#      project: 'default' # all Applications are created on project 'default'
+#      source:
+#        repoURL: https://github.com/sinotna/Gitops.git
+#        targetRevision: HEAD # can be set via the cluster config.json
+#        path: '{{ path }}'
+#        helm:
+#          ignoreMissingValueFiles: true
+#          valueFiles:
+#          - values.yaml
+#          - values-env.yaml
+#      destination:
+#        server: 'https://kubernetes.default.svc' # default value
+#        namespace: istio-system
+#      syncPolicy:
+#        automated:
+#          prune: true
+#          selfHeal: false
