the problem was with the application set namespace. The application sets namespace in metadata has to be argocd

--- a/appilcationsets.yaml
+++ b/appilcationsets.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
   name: myappset
-  namespace: default
+  namespace: argocd
 spec:
   generators:
   - git:
@@ -30,42 +30,4 @@ spec:
       syncPolicy:
         automated:
           prune: true
-<<<<<<< HEAD
           selfHeal: false
-#---
-#apiVersion: argoproj.io/v1alpha1
-#kind: ApplicationSet
-#metadata:
-#  name: istio
-#  namespace: istio-system
-#spec:
-#  generators:
-#  - git:
-#      repoURL: https://github.com/sinotna/Gitops.git
-#      revision: HEAD
-#      directories:
-#      - path: "Istio/*"
-#  template:
-#    metadata:
-#      name: '{{ path.basename }}' # name of the application
-#    spec:
-#      project: 'default' # all Applications are created on project 'default'
-#      source:
-#        repoURL: https://github.com/sinotna/Gitops.git
-#        targetRevision: HEAD # can be set via the cluster config.json
-#        path: '{{ path }}'
-#        helm:
-#          ignoreMissingValueFiles: true
-#          valueFiles:
-#          - values.yaml
-#          - values-env.yaml
-#      destination:
-#        server: 'https://kubernetes.default.svc' # default value
-#        namespace: istio-system
-#      syncPolicy:
-#        automated:
-#          prune: true
-#          selfHeal: false
-=======
-          selfHeal: false
->>>>>>> parent of e5d6491 (New application set for istio. Istio is now seperated from the rest of the apps)
