--- a/Tools/Istio/base/Chart.yaml
+++ b/Tools/Istio/base/Chart.yaml
@@ -4,7 +4,7 @@ description: Helm chart for deploying Istio cluster resources and CRDs
 icon: https://istio.io/latest/favicons/android-192x192.png
 keywords:
 - istio
-name: base
+name: istio-base
 sources:
 - https://github.com/istio/istio
 version: 1.18.1
