The Istio branch declared in the application's set revision

--- a/appilcationsets.yaml
+++ b/appilcationsets.yaml
@@ -43,7 +43,7 @@ spec:
   generators:
   - git:
       repoURL: https://github.com/sinotna/Gitops.git
-      revision: HEAD
+      revision: Istio
       directories:
       - path: "Tools/Istio/*"
   template:
