--- a/appilcationsets.yaml
+++ b/appilcationsets.yaml
@@ -94,7 +94,7 @@ spec:
           - values.yaml
       destination:
         server: 'https://kubernetes.default.svc' # default value
-        namespace: tools
+        namespace: '{{ namespace }}'
       syncPolicy:
         automated:
           prune: true
