--- a/Tools/sealed-secrets/Chart.yaml
+++ b/Tools/sealed-secrets/Chart.yaml
@@ -1,11 +1,17 @@
-apiVersion: v1
-appVersion: 0.13.1
-description: A Helm chart for Sealed Secrets
+annotations:
+  category: DeveloperTools
+apiVersion: v2
+appVersion: v0.23.0
+description: Helm chart for the sealed-secrets controller.
 home: https://github.com/bitnami-labs/sealed-secrets
-icon: https://avatars0.githubusercontent.com/u/34656521?s=200&v=4
-kubeVersion: '>=1.9.0-0'
+icon: https://bitnami.com/assets/stacks/sealed-secrets/img/sealed-secrets-stack-220x234.png
+keywords:
+- secrets
+- sealed-secrets
+kubeVersion: '>=1.16.0-0'
 maintainers:
-- email: mkm@bitnami.com
-  name: mkmik
+- name: Bitnami
+  url: https://github.com/bitnami-labs/sealed-secrets
 name: sealed-secrets
-version: 1.13.2
+type: application
+version: 2.11.0
