--- a/Tools/sealed-secrets/templates/deployment.yaml
+++ b/Tools/sealed-secrets/templates/deployment.yaml
@@ -1,88 +1,164 @@
-{{- if .Values.controller.create -}}
-apiVersion: apps/v1
+{{- if .Values.createController }}
+apiVersion: {{ include "sealed-secrets.deployment.apiVersion" . }}
 kind: Deployment
 metadata:
-  name: {{ template "sealed-secrets.fullname" . }}
-  namespace: {{ template "sealed-secrets.namespace" . }}
-  labels:
-    app.kubernetes.io/name: {{ template "sealed-secrets.name" . }}
-    helm.sh/chart: {{ template "sealed-secrets.chart" . }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/version: {{ .Chart.AppVersion }}
+  name: {{ include "sealed-secrets.fullname" . }}
+  namespace: {{ include "sealed-secrets.namespace" . }}
+  labels: {{- include "sealed-secrets.labels" . | nindent 4 }}
+  {{- if .Values.commonAnnotations }}
+  annotations: {{- toYaml .Values.commonAnnotations | nindent 4 }}
+  {{- end }}
 spec:
+  replicas: 1
   selector:
-    matchLabels:
-      app.kubernetes.io/name: {{ template "sealed-secrets.name" . }}
-      app.kubernetes.io/instance: {{ .Release.Name }}
+    matchLabels: {{- include "sealed-secrets.matchLabels" . | nindent 6 }}
   template:
     metadata:
-      annotations:
-      {{- with .Values.podAnnotations }}
-        {{- toYaml . | nindent 8 }}
+      {{- if .Values.podAnnotations }}
+      annotations: {{- toYaml .Values.podAnnotations | nindent 8 }}
       {{- end }}
-      labels:
-        app.kubernetes.io/name: {{ template "sealed-secrets.name" . }}
-        app.kubernetes.io/instance: {{ .Release.Name }}
+      labels: {{- include "sealed-secrets.matchLabels" . | nindent 8 }}
         {{- if .Values.podLabels }}
-{{ toYaml .Values.podLabels | indent 8 }}
+        {{- toYaml .Values.podLabels | nindent 8 }}
         {{- end }}
     spec:
-      serviceAccountName: {{ template "sealed-secrets.serviceAccountName" . }}
+      {{- if .Values.image.pullSecrets }}
+      imagePullSecrets:
+      {{- range .Values.image.pullSecrets }}
+        - name: {{ . }}
+      {{- end }}
+      {{- end }}
+      {{- if .Values.affinity }}
+      affinity: {{- toYaml .Values.affinity | nindent 8 }}
+      {{- end }}
+      {{- if .Values.nodeSelector }}
+      nodeSelector: {{- toYaml .Values.nodeSelector | nindent 8 }}
+      {{- end }}
+      {{- if .Values.tolerations }}
+      tolerations: {{- toYaml .Values.tolerations | nindent 8 }}
+      {{- end }}
       {{- if .Values.priorityClassName }}
-      priorityClassName: "{{ .Values.priorityClassName }}"
+      priorityClassName: {{ .Values.priorityClassName | quote }}
+      {{- end }}
+      {{- if .Values.runtimeClassName }}
+      runtimeClassName: {{ .Values.runtimeClassName | quote }}
+      {{- end }}
+      {{- if .Values.podSecurityContext.enabled }}
+      securityContext: {{- omit .Values.podSecurityContext "enabled" | toYaml | nindent 8 }}
+      {{- end }}
+      serviceAccountName: {{ include "sealed-secrets.serviceAccountName" . }}
+      {{- if .Values.hostNetwork }}
+      hostNetwork: true
+      {{- end }}
+      {{- if .Values.dnsPolicy }}
+      dnsPolicy: {{ .Values.dnsPolicy }}
       {{- end }}
       containers:
-        - name: {{ template "sealed-secrets.fullname" . }}
+        - name: controller
           command:
+          {{- if .Values.command }}
+            {{- include "sealed-secrets.render" (dict "value" .Values.command "context" $) | nindent 12 }}
+          {{- else }}
             - controller
+          {{- end }}
           args:
-            - "--key-prefix"
-            - "{{ .Values.secretName }}"
-            {{- range $value := .Values.commandArgs }}
-            - {{ $value | quote }}
+          {{- if .Values.args }}
+            {{- include "sealed-secrets.render" (dict "value" .Values.args "context" $) | nindent 12 }}
+          {{- else }}
+            {{- if .Values.updateStatus }}
+            - --update-status
             {{- end }}
-          image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
+            {{- if .Values.skipRecreate }}
+            - --skip-recreate
+            {{- end }}
+            {{- if .Values.keyrenewperiod }}
+            - --key-renew-period
+            - {{ .Values.keyrenewperiod | quote }}
+            {{- end }}
+            {{- if .Values.rateLimit }}
+            - --rate-limit
+            - {{ .Values.rateLimit | quote }}
+            {{- end }}
+            {{- if .Values.rateLimitBurst }}
+            - --rate-limit-burst
+            - {{ .Values.rateLimitBurst | quote }}
+            {{- end }}
+            - --key-prefix
+            - {{ .Values.secretName | quote }}
+            {{- if .Values.additionalNamespaces }}
+            - --additional-namespaces
+            - {{ join "," .Values.additionalNamespaces | quote }}
+            {{- end }}
+            {{- if $.Values.privateKeyAnnotations }}
+            {{- $privatekeyAnnotations := ""}}
+            {{- range $k, $v := $.Values.privateKeyAnnotations }}
+              {{- if not (and $v (kindIs "string" $v)) }}
+                {{ fail "Annotation values have to be strings"}}
+              {{- end }}
+              {{- $privatekeyAnnotations = printf "%s=%s,%s" $k $v $privatekeyAnnotations}}
+            {{- end }}
+            - --privatekey-annotations
+            - {{ trimSuffix "," $privatekeyAnnotations | quote }}
+            {{- end }}            
+            {{- if $.Values.privateKeyLabels }}
+            {{- $privateKeyLabels := ""}}
+            {{- range $k, $v := $.Values.privateKeyLabels }}
+              {{- if not (and $v (kindIs "string" $v)) }}
+                {{ fail "Label values have to be strings"}}
+              {{- end }}
+              {{- $privateKeyLabels = printf "%s=%s,%s" $k $v $privateKeyLabels}}
+            {{- end }}
+            - --privatekey-labels
+            - {{ trimSuffix "," $privateKeyLabels | quote }}
+            {{- end }}
+            {{- if .Values.logInfoStdout }}
+            - --log-info-stdout
+            {{- end }}
+          {{- end }}
+          image: {{ printf "%s/%s:%s" .Values.image.registry .Values.image.repository .Values.image.tag }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - containerPort: 8080
               name: http
+          {{- if .Values.startupProbe.enabled }}
+          startupProbe: {{- include "sealed-secrets.render" (dict "value" (omit .Values.startupProbe "enabled") "context" $) | nindent 12 }}
+            tcpSocket:
+              port: http
+          {{- else if .Values.customStartupProbe }}
+          startupProbe: {{- include "sealed-secrets.render" (dict "value" .Values.customStartupProbe "context" $) | nindent 12 }}
+          {{- end }}
+          {{- if .Values.livenessProbe.enabled }}
+          livenessProbe: {{- include "sealed-secrets.render" (dict "value" (omit .Values.livenessProbe "enabled") "context" $) | nindent 12 }}
+            httpGet:
+              path: /healthz
+              port: http
+          {{- else if .Values.customLivenessProbe }}
+          livenessProbe: {{- include "sealed-secrets.render" (dict "value" .Values.customLivenessProbe "context" $) | nindent 12 }}
+          {{- end }}
+          {{- if .Values.readinessProbe.enabled }}
+          readinessProbe: {{- include "sealed-secrets.render" (dict "value" (omit .Values.readinessProbe "enabled") "context" $) | nindent 12 }}
+            httpGet:
+              path: /healthz
+              port: http
+          {{- else if .Values.customReadinessProbe }}
+          readinessProbe: {{- include "sealed-secrets.render" (dict "value" .Values.customReadinessProbe "context" $) | nindent 12 }}
+          {{- end }}
+          {{- if .Values.resources }}
+          resources: {{- toYaml .Values.resources | nindent 12 }}
+          {{- end }}
+          {{- if .Values.containerSecurityContext.enabled }}
+          securityContext: {{- omit .Values.containerSecurityContext "enabled" | toYaml | nindent 12 }}
+          {{- end }}
           volumeMounts:
-          - mountPath: /tmp
-            name: tmp
-          livenessProbe:
-            httpGet:
-              path: /healthz
-              port: 8080
-          readinessProbe:
-            httpGet:
-              path: /healthz
-              port: 8080
-          securityContext:
-            readOnlyRootFilesystem: true
-            {{- if .Values.securityContext.runAsUser }}
-            runAsNonRoot: true
-            runAsUser: {{ .Values.securityContext.runAsUser }}
+            {{- if .Values.additionalVolumeMounts }}
+              {{- toYaml .Values.additionalVolumeMounts | nindent 12 }} 
             {{- end }}
-          resources:
-{{ toYaml .Values.resources | indent 12 }}
-      {{- if .Values.securityContext.fsGroup }}
-      securityContext:
-        fsGroup: {{ .Values.securityContext.fsGroup }}
+            - mountPath: /tmp
+              name: tmp
+      volumes: 
+      {{- if .Values.additionalVolumes }}
+        {{- toYaml .Values.additionalVolumes | nindent 8 }} 
       {{- end }}
-      volumes:
-      - name: tmp
-        emptyDir: {}
-    {{- with .Values.nodeSelector }}
-      nodeSelector:
-{{ toYaml . | indent 8 }}
-    {{- end }}
-    {{- with .Values.affinity }}
-      affinity:
-{{ toYaml . | indent 8 }}
-    {{- end }}
-    {{- with .Values.tolerations }}
-      tolerations:
-{{ toYaml . | indent 8 }}
-    {{- end }}
+        - name: tmp
+          emptyDir: {}
 {{- end }}
