--- a/Tools/sealed-secrets/templates/networkpolicy.yaml
+++ b/Tools/sealed-secrets/templates/networkpolicy.yaml
@@ -1,20 +1,38 @@
-{{- if .Values.networkPolicy -}}
-apiVersion: networking.k8s.io/v1
+{{- if .Values.networkPolicy.enabled }}
+apiVersion: {{ include "sealed-secrets.networkPolicy.apiVersion" . }}
 kind: NetworkPolicy
 metadata:
-  name: {{ template "sealed-secrets.fullname" . }}
-  namespace: {{ template "sealed-secrets.namespace" . }}
-  labels:
-    app.kubernetes.io/name: {{ template "sealed-secrets.name" . }}
-    helm.sh/chart: {{ template "sealed-secrets.chart" . }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/version: {{ .Chart.AppVersion }}
+  name: {{ include "sealed-secrets.fullname" . }}
+  namespace: {{ include "sealed-secrets.namespace" . }}
+  labels: {{- include "sealed-secrets.labels" . | nindent 4 }}
 spec:
   podSelector:
-    matchLabels:
-      app.kubernetes.io/name: {{ template "sealed-secrets.name" . }}
+    matchLabels: {{- include "sealed-secrets.matchLabels" . | nindent 6 }}
   ingress:
     - ports:
-      - port: 8080
-{{- end -}}
+      - port: {{ .Values.service.port }}
+  {{- if .Values.networkPolicy.egress.enabled }}
+  egress:
+    - to:
+      {{- if not .Values.networkPolicy.egress.kubeapiCidr }}
+      {{- $kubernetesEndpoint := lookup "v1" "Endpoints" "default" "kubernetes" }}
+      {{- if $kubernetesEndpoint }}
+        {{- range $kubernetesAddress := (first $kubernetesEndpoint.subsets).addresses }}
+      - ipBlock:
+          cidr: {{ $kubernetesAddress.ip }}/32
+        {{- end}}      
+      ports:
+        {{- range $kubernetesPort := (first $kubernetesEndpoint.subsets).ports }}
+        - protocol: {{ $kubernetesPort.protocol }}
+          port: {{ $kubernetesPort.port }}
+        {{- end }}
+      {{- end}}
+      {{- else }}
+      - ipBlock:
+          cidr: {{ .Values.networkPolicy.egress.kubeapiCidr }}
+      ports:
+        - protocol: TCP
+          port: {{ .Values.networkPolicy.egress.kubeapiPort }}
+      {{- end }}
+  {{- end }}
+{{- end }}
