--- a/Tools/sealed-secrets/templates/service-account.yaml
+++ b/Tools/sealed-secrets/templates/service-account.yaml
@@ -2,12 +2,19 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ template "sealed-secrets.serviceAccountName" . }}
-  namespace: {{ template "sealed-secrets.namespace" . }}
-  labels:
-    app.kubernetes.io/name: {{ template "sealed-secrets.name" . }}
-    helm.sh/chart: {{ template "sealed-secrets.chart" . }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/version: {{ .Chart.AppVersion }}
+  name: {{ include "sealed-secrets.serviceAccountName" . }}
+  namespace: {{ include "sealed-secrets.namespace" . }}
+  {{- if or (.Values.commonAnnotations) (.Values.serviceAccount.annotations) }}
+  annotations: 
+    {{- if .Values.commonAnnotations }}
+    {{- toYaml .Values.commonAnnotations | nindent 4 }}
+    {{- end}}
+    {{- if .Values.serviceAccount.annotations }}
+    {{- toYaml .Values.serviceAccount.annotations | nindent 4 }}
+    {{- end}}
+  {{- end }}
+  labels: {{- include "sealed-secrets.labels" . | nindent 4 }}
+    {{- if .Values.serviceAccount.labels }}
+    {{- include "sealed-secrets.render" ( dict "value" .Values.serviceAccount.labels "context" $) | nindent 4 }}
+    {{- end }}
 {{ end }}
