sealed-secrets application sets path changed

--- a/sealed-secrets.yaml
+++ b/sealed-secrets.yaml
@@ -19,7 +19,7 @@ spec:
       source:
         repoURL: https://github.com/sinotna/Gitops.git
         targetRevision: sealed-secrets # can be set via the cluster config.json
-        path: '{{ path }}'
+        path: './'
         helm:
           ignoreMissingValueFiles: true
           valueFiles:
