sealed-secrets application sets path changed

--- a/sealed-secrets.yaml
+++ b/sealed-secrets.yaml
@@ -10,7 +10,7 @@ spec:
       repoURL: https://github.com/sinotna/Gitops.git
       revision: sealed-secrets
       directories:
-      - path: "Tools/sealed-secrets/*"
+      - path: "Tools/*"
   template:
     metadata:
       name: sealed-secrets # name of the application
