testing sealed secrets

--- a/sealed-secrets.yaml
+++ b/sealed-secrets.yaml
@@ -10,23 +10,23 @@ spec:
       repoURL: https://github.com/sinotna/Gitops.git
       revision: sealed-secrets
       directories:
-      - path: "Tools/*"
+      - path: "Tools/sealed-secrets/*"
   template:
     metadata:
-      name: sealed-secrets # name of the application
+      name: '{{ path.basename }}' # name of the application
     spec:
       project: 'default' # all Applications are created on project 'default'
       source:
         repoURL: https://github.com/sinotna/Gitops.git
         targetRevision: sealed-secrets # can be set via the cluster config.json
-        path: './'
+        path: '{{ path }}'
         helm:
           ignoreMissingValueFiles: true
           valueFiles:
           - values.yaml
       destination:
         server: 'https://kubernetes.default.svc' # default value
-        namespace: '{{ namespace }}'
+        namespace: sealed-secrets
       syncPolicy:
         automated:
           prune: true
