--- a/appilcationsets.yaml
+++ b/appilcationsets.yaml
@@ -36,7 +36,41 @@ spec:
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
-  name: tools
+  name: istio
+  namespace: argocd
+spec:
+  generators:
+  - git:
+      repoURL: https://github.com/sinotna/Gitops.git
+      revision: HEAD
+      directories:
+      - path: "Istio/*"
+  template:
+    metadata:
+      name: '{{ path.basename }}' # name of the application
+    spec:
+      project: 'default' # all Applications are created on project 'default'
+      source:
+        repoURL: https://github.com/sinotna/Gitops.git
+        targetRevision: HEAD # can be set via the cluster config.json
+        path: '{{ path }}'
+        helm:
+          ignoreMissingValueFiles: true
+          valueFiles:
+          - values.yaml
+      destination:
+        server: 'https://kubernetes.default.svc' # default value
+        namespace: istio-system
+      syncPolicy:
+        automated:
+          prune: true
+          selfHeal: false
+...
+---
+apiVersion: argoproj.io/v1alpha1
+kind: ApplicationSet
+metadata:
+  name: sealed-secrets
   namespace: argocd
 spec:
   generators:
@@ -44,7 +78,7 @@ spec:
       repoURL: https://github.com/sinotna/Gitops.git
       revision: sealed-secrets
       directories:
-      - path: "Tools/*"
+      - path: "Tools/sealed-secrets/*"
   template:
     metadata:
       name: '{{ path.basename }}' # name of the application
@@ -60,7 +94,7 @@ spec:
           - values.yaml
       destination:
         server: 'https://kubernetes.default.svc' # default value
-        namespace: '{{ namespace }}'
+        namespace: tools
       syncPolicy:
         automated:
           prune: true
