--- a/sealed-secrets.yaml
+++ b/sealed-secrets.yaml
@@ -26,7 +26,7 @@ spec:
           - values.yaml
       destination:
         server: 'https://kubernetes.default.svc' # default value
-        namespace: sealed-secrets
+        namespace: kube-system
       syncPolicy:
         automated:
           prune: true
