[---] - fix: testing sealed

--- a/sealed-secrets.yaml
+++ b/sealed-secrets.yaml
@@ -26,7 +26,7 @@ spec:
           - values.yaml
       destination:
         server: 'https://kubernetes.default.svc' # default value
-        namespace: kube-system
+        namespace: sealed-secrets
       syncPolicy:
         automated:
           prune: true
