[---] - fix: appset path was wrong

--- a/sealed-secrets.yaml
+++ b/sealed-secrets.yaml
@@ -10,7 +10,7 @@ spec:
       repoURL: https://github.com/sinotna/Gitops.git
       revision: sealed-secrets
       directories:
-      - path: "/Tools/sealed-secrets/*"
+      - path: "Tools/sealed-secrets"
   template:
     metadata:
       name: '{{ path.basename }}' # name of the application
