[---] - fix: url changed

--- a/appilcationsets.yaml
+++ b/appilcationsets.yaml
@@ -9,16 +9,16 @@ spec:
   - git:
       repoURL: https://github.com/sinotna/Gitops.git
       revision: applicationsets
-      files:
-      - path: "**/values.yaml"
+      directories::
+      - path: "apps/*"
   template:
     metadata:
       name: "{{ .Values.appsetTemplates.pathBasename | quote }}" # name of the application
     spec:
       project: 'default' # all Applications are created on project 'default'
       source:
-        repoURL: https://gitlab.devops.telekom.de/central-groots/playground/gitops.git
-        targetRevision: HEAD # can be set via the cluster config.json
+        repoURL: https://github.com/sinotna/Gitops.git
+        targetRevision: applicationsets # can be set via the cluster config.json
         path: "{{ .Values.appsetTemplates.path | quote }}"
         helm:
           ignoreMissingValueFiles: true
