--- a/apps/kubernetes-dashboard/values.yaml
+++ b/apps/kubernetes-dashboard/values.yaml
@@ -16,7 +16,7 @@
 # This is a YAML-formatted file.
 # Declare name/value pairs to be passed into your templates.
 # name: value
-
+namespace: "tools"
 image:
   ## Repository for container
   repository: kubernetesui/dashboard
