server added, name removed

--- a/argo-cd/templates/platform-rootapp.yaml
+++ b/argo-cd/templates/platform-rootapp.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   destination:
     namespace: platform-applications
-    name: in-cluster
+    server: https://kubernetes.default.svc
   project: platform
   source:
     path: applications
