--- a/argo-cd/values.yaml
+++ b/argo-cd/values.yaml
@@ -240,7 +240,7 @@ configs:
 
     ## Server properties
     # -- Run server without TLS
-    server.insecure: false
+    server.insecure: true
     # -- Value for base href in index.html. Used if Argo CD is running behind reverse proxy under subpath different from /
     server.basehref: /
     # -- Used if Argo CD is running behind reverse proxy under subpath different from /
@@ -2345,7 +2345,7 @@ repoServer:
 ## ApplicationSet controller
 applicationSet:
   # -- Enable ApplicationSet controller
-  enabled: true
+  enabled: false
 
   # -- ApplicationSet controller name string
   name: applicationset-controller
